@@ -2,6 +2,8 @@ Revision history for Perl module HTML::ParseBrowser
 
 1.07 2014-02-04
 
+    - Recognise Internet Explorer 11
+    - Recognise Opera 15
     - Added github repo to pod
 
 1.06 2013-04-20
